# ownNBLM

./: .env.example  .env.production.example  .env.vps  .gitignore  .vercelignore  ARCHITECTURE_COMPARISON.md  BACKEND_IMPLEMENTATION_PLAN.md  Caddyfile  DEPLOYMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  EXECUTIVE_SUMMARY.md  FEATURE_COMPLETENESS_VERIFICATION.md  FIXES_IMPLEMENTATION_SUMMARY.md  FULLSTACK_DEVELOPMENT_PLAN.md  FULL_STACK_SETUP_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INLINE_ANNOTATIONS_GUIDE.md  INTEGRATION_CHECKLIST.md  Makefile  PERSISTENCE_SYNC.md  PLAN.md  PRODUCTION_READY_SUMMARY.md  PRODUCT_ROADMAP.md  QA_AUDIT_REPORT.md  README.md  ROADMAP.md  SYNC_IMPLEMENTATION_SUMMARY.md  TECHNICAL_ARCHITECTURE.md  UI_FIXES_SUMMARY.md  UI_REDESIGN_NOTES.md  USER_GUIDE.md  agile-delivery-document.md  chat context - requirement gathering.md  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml  index.html  package.json  (+5 more)
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_phase2_phase3_tables.py  003_widen_embedding_ref.py  004_phase4_phase5_tables.py  005_phase4_oauth_refresh.py  (+1 more)
backend/app/: __init__.py  corpus_cleanup.py  main.py  seed.py
backend/migrations/: add_notebooks.py
backend/tests/: conftest.py  test_api_flow.py  test_auth_access.py  test_hardening.py  test_health.py  test_llm_burn.py  test_phase45.py  test_phase4_phase5.py  test_rate_limit.py  test_source_lifecycle.py
docs/: HOSTING.md  (+2 more)
(+178 files in other folders)
