[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ownnblm-backend"
version = "0.1.0"
description = "ownNBLM API — knowledge assistant backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
  "httpx>=0.28",
  "huey>=2.5",
  "structlog>=24.4",
  "litellm>=1.83",
  "python-dotenv>=1.0",
  "PyPDF2>=3.0",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "slowapi>=0.1.9",
  "prometheus-fastapi-instrumentator>=7.0",
  "redis>=5.0",
  "stripe>=11.0",
  "tiktoken>=0.8",
  "email-validator>=2.0",
  "bcrypt>=4.0",
  "psycopg[binary]>=3.2",
  "watchdog>=6.0",
]

[project.optional-dependencies]
pageindex = ["pageindex"]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
  "httpx>=0.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
